firxed scrollbar of stopes-popup slider

--- a/markup/static/scss/etc/stores-popup.scss
+++ b/markup/static/scss/etc/stores-popup.scss
@@ -1,6 +1,7 @@
 /*------stores-popup-------*/
 .popup-delivery-slider {
 	position: relative;
+	overflow: hidden;
 	margin: 20px 0 0;
 	.popup-delivery-to-adress {
 		display: none;
